avcodec/jpeg2000dec: Fallback to yuv if no matching xyz format exists

Fixes Ticket4471

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>